--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body>
 
 	<!-- Navigation -->
-	<nav class="navbar navbar-expand-md navbar-light  fixed-top" style="background-color: #e3f2fd;">
+	<nav class="navbar navbar-expand-md navbar-light  fixed-top" >
 		<div class="container-fluid">
 			<a class="navbar-brand" href="#"> <img src="img/logo.png" alt="logo"></a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
@@ -30,10 +30,10 @@
 			<div class="collapse navbar-collapse" id="navbarResponsive">
 				<ul class="navbar-nav ml-auto">
 					<li class="nav-item active">
-						<a class="nav-link" href="index.html">Home</a>
+						<a id="navtext" class="nav-link" href="index.html">Home</a>
 					</li>
 					<li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <a id="navtext" class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Games
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -49,10 +49,10 @@
         </div>
       </li>
 					<li class="nav-item">
-						<a class="nav-link" href="about.html">About Us</a>
+						<a id="navtext" class="nav-link" href="about.html">About Us</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="privacy.html">Privacy</a>
+						<a id="navtext" class="nav-link" href="privacy.html">Privacy</a>
 					</li>
 
 				</ul>
