--- a/privacy.html
+++ b/privacy.html
@@ -70,35 +70,21 @@
 	<div class="container padding">
 		<dipv class="row text-center padding">
 			<div class="col-md-12">
-				Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+				<h4>Effective as of May 25, 2018</h4>
+				Our updated Privacy Policy explains what information we collect, how we use it, and the choices you have, including how to manage your privacy and cookies settings, access the information we have about you, and delete your account.
+
+	APKPure is committed to protecting consumer privacy online. We believe that greater protection of personal privacy on the Web will not only protect our users, but also increase users confidence and ultimately their participation in online activities. The purpose of our policy is to inform you about the types of information we gather about you when you visit our site, how we may use that information, whether we disclose it to anyone, and the choices you have regarding our use of the information. APKPure.com strives to offer its visitors the many advantages of Internet technology and to provide an interactive and personalized experience.
+				<h3>What information do we collect?</h3>
+<h5>Data you give us directly</h5>
+● if you register with us (such as your date of birth, username, avatar, password and email address);
+● information you provide by participating in any chats, communities or social media functions. We will consider that information as part of the public domain;
+● information you provide us if you report a problem with our Services or App.
+
 			</div>
 		</div>
 		<hr class="my-4">
 
 	</div>
-
-	<hr class="light">
-	<h1 id="heading1" style="color:white;" >UPCOMING GAMES</h1>
-	<hr class="light">
-
-	<div class="container-fluid padding">
-		<div class="row text-center padding">
-			<div class="col-xs-12 col-sm-6 col-md-4">
-				<img src="img/icons/shooter.png">
-				<h3>Shooter</h3>
-			</div>
-			<div class="col-xs-12 col-sm-6 col-md-4">
-				<img src="img/icons/sniper.png">
-				<h3>Sniper</h3>
-			</div>
-			<div class="col-xs-12 col-sm-6 col-md-4">
-				<img src="img/icons/cs.png">
-				<h3>Candy Sweet</h3>
-			</div>
-			<div class="col-xs-12 col-sm-6 col-md-4">
-				<img src="img/icons/bike.png">
-				<h3>Bike Racing</h3>
-			</div>
 
 		</div>
 		<hr class="my-4">
@@ -107,40 +93,10 @@
 	<!--- Two Column Section User feeback -->
 	<div id="support" class="row feedback">
 
-		<div class="col-md-6">
-			<div  class="jumbotron">
-				<h2>Report a problem</h2>
-				<form id="complaint">
-					<div class="form-group">
-						<label for="Your Name">Your Name</label>
-						<input style="width:60%;" type="text" class="form-control" id="name" placeholder="Name">
-						<label for="Email">Email</label>
-						<input style="width:60%;" type="text" class="form-control" id="email" placeholder="Your Email">
-						<label for="Email">Message</label>
-						<input style="width:60%;" type="text" class="form-control" id="message" placeholder="Game name & issue">
-					</div>
-					<button type="submit" class="btn btn-success">Submit</button>
-				</form>
-			</div>
-		</div>
 
 
-		<div class="col-md-6">
-			<div id="jumboFeedback" class="jumbotron">
-				<h2>Subscribe for new games</h2>
-				<form id="subscribe">
-					<div class="form-group">
-						<label for="Your Name">Your Email</label>
-						<input style="width:60%;" type="text" class="form-control" id="emailSub" placeholder="Your Email">
 
-					</div>
-					<button type="submit" class="btn btn-danger">Subscribe</button>
-				</form>
-				<br>
-				<iframe style="height:10%;" src="https://giphy.com/embed/3oz8xPjPPvOwrGjip2" width="280" height="270" frameBorder="0" class="giphy-embed" allowFullScreen margin="0"></iframe>
-			</div>
 
-		</div>
 
 
 	</div>
