--- a/privacy.html
+++ b/privacy.html
@@ -27,10 +27,10 @@
 			<div class="collapse navbar-collapse" id="navbarResponsive">
 				<ul class="navbar-nav ml-auto">
 					<li class="nav-item active">
-						<a class="nav-link" href="index.html">Home</a>
+						<a id="navtext" class="nav-link" href="index.html">Home</a>
 					</li>
 					<li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <a id="navtext" class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Games
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -46,10 +46,10 @@
         </div>
       </li>
 					<li class="nav-item">
-						<a class="nav-link" href="about.html">About Us</a>
+						<a id="navtext" class="nav-link" href="about.html">About Us</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="privacy.html">Privacy</a>
+						<a id="navtext" class="nav-link" href="privacy.html">Privacy</a>
 					</li>
 
 				</ul>
@@ -70,15 +70,32 @@
 	<div class="container padding">
 		<dipv class="row text-center padding">
 			<div class="col-md-12">
-				<h4>Effective as of May 25, 2018</h4>
-				Our updated Privacy Policy explains what information we collect, how we use it, and the choices you have, including how to manage your privacy and cookies settings, access the information we have about you, and delete your account.
+				<h3>Effective as of May 25, 2018</h3>
+				<p style="color:white;">Our updated Privacy Policy explains what information we collect, how we use it, and the choices you have, including how to manage your privacy and cookies settings, access the information we have about you, and delete your account.
 
-	APKPure is committed to protecting consumer privacy online. We believe that greater protection of personal privacy on the Web will not only protect our users, but also increase users confidence and ultimately their participation in online activities. The purpose of our policy is to inform you about the types of information we gather about you when you visit our site, how we may use that information, whether we disclose it to anyone, and the choices you have regarding our use of the information. APKPure.com strives to offer its visitors the many advantages of Internet technology and to provide an interactive and personalized experience.
+	We are committed to protecting consumer privacy online. We believe that greater protection of personal privacy on the Web will not only protect our users, but also increase users confidence and ultimately their participation in online activities. The purpose of our policy is to inform you about the types of information we gather about you when you visit our site, how we may use that information, whether we disclose it to anyone, and the choices you have regarding our use of the information. We strive to offer its visitors the many advantages of Internet technology and to provide an interactive and personalized experience.
+	</p>
+	<br>
+	<hr class="light">
+
 				<h3>What information do we collect?</h3>
-<h5>Data you give us directly</h5>
-● if you register with us (such as your date of birth, username, avatar, password and email address);
+<p style="color:white;">● if you register with us (such as your date of birth, username, avatar, password and email address);
 ● information you provide by participating in any chats, communities or social media functions. We will consider that information as part of the public domain;
 ● information you provide us if you report a problem with our Services or App.
+How do we use your information?<p>
+<h3>We may use your data in the following ways:</h3>
+
+<p style="color:white;">To provide you the App and associated websites and continuously improve their features;
+<br>
+● To store your running-history;
+<br>
+● To provide helpdesk and support services;
+<br>
+● To customise the App which is available to you;
+<br>
+● To ensure that you are in compliance with our terms;
+<br>
+● To moderate any chat messages;<p>
 
 			</div>
 		</div>
