--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/js/bootstrap.min.js" integrity="sha384-o+RDsa0aLu++PJvFqy8fFScvbHFLtbvScb8AjopnFD+iEQ7wo/CG0xlczd+2O/em" crossorigin="anonymous"></script>
 	<script src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
 	<script src="js/scripts.js" type="text/javascript">
-
 	</script>
 	<link href="css/styles.css" rel="stylesheet" type="text/css">
 </head>
@@ -21,7 +20,7 @@
 <body>
 
 	<!-- Navigation -->
-	<nav class="navbar navbar-expand-md navbar-light  fixed-top" >
+	<nav class="navbar navbar-expand-md navbar-light  fixed-top">
 		<div class="container-fluid">
 			<a class="navbar-brand" href="#"> <img src="img/logo.png" alt="logo"></a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
@@ -33,21 +32,21 @@
 						<a id="navtext" class="nav-link" href="index.html">Home</a>
 					</li>
 					<li class="nav-item dropdown">
-        <a id="navtext" class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+						<a id="navtext" class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Games
         </a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="game3.html">Angry Birds</a>
-          <a class="dropdown-item" href="game2.html">Harry Potter</a>
-          <a class="dropdown-item" href="game1.html">Fifa 18</a>
-					<a class="dropdown-item" href="#">Word Cross</a>
-					<a class="dropdown-item" href="#">Subway Surfers</a>
-					<a class="dropdown-item" href="#">Clash Royale</a>
-					<a class="dropdown-item" href="#">Nba2K18</a>
-					<a class="dropdown-item" href="#">8 Ball Pool</a>
+						<div class="dropdown-menu" aria-labelledby="navbarDropdown">
+							<a class="dropdown-item" href="game3.html">Angry Birds</a>
+							<a class="dropdown-item" href="game2.html">Harry Potter</a>
+							<a class="dropdown-item" href="game1.html">Fifa 18</a>
+							<a class="dropdown-item" href="#">Word Cross</a>
+							<a class="dropdown-item" href="#">Subway Surfers</a>
+							<a class="dropdown-item" href="#">Clash Royale</a>
+							<a class="dropdown-item" href="#">Nba2K18</a>
+							<a class="dropdown-item" href="#">8 Ball Pool</a>
 
-        </div>
-      </li>
+						</div>
+					</li>
 					<li class="nav-item">
 						<a id="navtext" class="nav-link" href="about.html">About Us</a>
 					</li>
@@ -109,208 +108,208 @@
 	    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
 	    <span class="sr-only">Previous</span>
 	  </a>
-		<a class="carousel-control-next" href="#slides" role="button" data-slide="next">
+				<a class="carousel-control-next" href="#slides" role="button" data-slide="next">
 	    <span class="carousel-control-next-icon" aria-hidden="true"></span>
 	    <span class="sr-only">Next</span>
 	  </a>
-	</div>
-
-	<!--- Jumbotron Games Header -->
-	<hr class="light">
-	<h1 id="heading1" style="color:white;" >GAMES</h1>
-	<hr class="light">
-
-
-	<!--- Three Column Section Games  -->
-	<div class="container-fluid padding">
-		<div class="row text-center padding">
-			<div class="col-xs-12 col-sm-6 col-md-4">
-				<img src="img/icons/ab.png">
-				<h3>Angry Birds</h3>
-			</div>
-			<div class="col-xs-12 col-sm-6 col-md-4">
-				<img src="img/icons/fifa.png">
-				<h3>Fifa</h3>
-			</div>
-			<div class="col-xs-12 col-sm-6 col-md-4">
-				<img src="img/icons/hp.png">
-				<h3>Harry Potter</h3>
-			</div>
-			<div class="col-xs-12 col-sm-6 col-md-4">
-				<img src="img/icons/2k.png">
-				<h3>NBA 2k18</h3>
-			</div>
-			<div class="col-xs-12 col-sm-6 col-md-4">
-				<img src="img/icons/word.png">
-				<h3>Word Cross</h3>
-			</div>
-			<div class="col-xs-12 col-sm-6 col-md-4">
-				<img src="img/icons/cc.png">
-				<h3>Candy Crush</h3>
-			</div>
-			<div class="col-xs-12 col-sm-6 col-md-4">
-				<img src="img/icons/cr.png">
-				<h3>Clash Royale</h3>
-			</div>
-			<div class="col-xs-12 col-sm-6 col-md-4">
-				<img src="img/icons/sub.png">
-				<h3>Subway Surfers</h3>
-			</div>
-			<div class="col-xs-12 col-sm-6 col-md-4">
-				<img src="img/icons/pool.png">
-				<h3>8 Ball Pool</h3>
-			</div>
-		</div>
-		<hr class="my-4">
-
-	</div>
-
-	<hr class="light">
-	<h1 id="heading1" style="color:white;" >UPCOMING GAMES</h1>
-	<hr class="light">
-
-	<div class="container-fluid padding">
-		<div class="row text-center padding">
-			<div class="col-xs-12 col-sm-6 col-md-4">
-				<img src="img/icons/shooter.png">
-				<h3>Shooter</h3>
-			</div>
-			<div class="col-xs-12 col-sm-6 col-md-4">
-				<img src="img/icons/sniper.png">
-				<h3>Sniper</h3>
-			</div>
-			<div class="col-xs-12 col-sm-6 col-md-4">
-				<img src="img/icons/cs.png">
-				<h3>Candy Sweet</h3>
-			</div>
-			<div class="col-xs-12 col-sm-6 col-md-4">
-				<img src="img/icons/bike.png">
-				<h3>Bike Racing</h3>
 			</div>
 
-		</div>
-		<hr class="my-4">
-	</div>
+			<!--- Jumbotron Games Header -->
+			<hr class="light">
+			<h1 id="heading1" style="color:white;">GAMES</h1>
+			<hr class="light">
 
-	<!--- Two Column Section User feeback -->
-	<div id="support" class="row feedback">
 
-		<div class="col-md-6">
-			<div  class="jumbotron">
-				<h2>Report a problem</h2>
-				<form id="complaint">
-					<div class="form-group">
-						<label for="Your Name">Your Name</label>
-						<input style="width:60%;" type="text" class="form-control" id="name" placeholder="Name">
-						<label for="Email">Email</label>
-						<input style="width:60%;" type="text" class="form-control" id="email" placeholder="Your Email">
-						<label for="Email">Message</label>
-						<input style="width:60%;" type="text" class="form-control" id="message" placeholder="Game name & issue">
+			<!--- Three Column Section Games  -->
+			<div class="container-fluid padding">
+				<div class="row text-center padding">
+					<div class="col-xs-12 col-sm-6 col-md-4">
+						<a href="game3.html"><img src="img/icons/ab.png"></a>
+						<h3>Angry Birds</h3>
 					</div>
-					<button id="submit" type="submit" class="btn btn-success">Submit</button>
-				</form>
+					<div class="col-xs-12 col-sm-6 col-md-4">
+						<a href="game1.html"><img src="img/icons/fifa.png"></a>
+						<h3>Fifa</h3>
+					</div>
+					<div class="col-xs-12 col-sm-6 col-md-4">
+						<a href="game2.html"><img src="img/icons/hp.png"></a>
+						<h3>Harry Potter</h3>
+					</div>
+					<div class="col-xs-12 col-sm-6 col-md-4">
+						<img src="img/icons/2k.png">
+						<h3>NBA 2k18</h3>
+					</div>
+					<div class="col-xs-12 col-sm-6 col-md-4">
+						<img src="img/icons/word.png">
+						<h3>Word Cross</h3>
+					</div>
+					<div class="col-xs-12 col-sm-6 col-md-4">
+						<img src="img/icons/cc.png">
+						<h3>Candy Crush</h3>
+					</div>
+					<div class="col-xs-12 col-sm-6 col-md-4">
+						<img src="img/icons/cr.png">
+						<h3>Clash Royale</h3>
+					</div>
+					<div class="col-xs-12 col-sm-6 col-md-4">
+						<img src="img/icons/sub.png">
+						<h3>Subway Surfers</h3>
+					</div>
+					<div class="col-xs-12 col-sm-6 col-md-4">
+						<img src="img/icons/pool.png">
+						<h3>8 Ball Pool</h3>
+					</div>
+				</div>
+				<hr class="my-4">
+
 			</div>
-		</div>
+
+			<hr class="light">
+			<h1 id="heading1" style="color:white;">UPCOMING GAMES</h1>
+			<hr class="light">
+
+			<div class="container-fluid padding">
+				<div class="row text-center padding">
+					<div class="col-xs-12 col-sm-6 col-md-4">
+						<img src="img/icons/shooter.png">
+						<h3>Shooter</h3>
+					</div>
+					<div class="col-xs-12 col-sm-6 col-md-4">
+						<img src="img/icons/sniper.png">
+						<h3>Sniper</h3>
+					</div>
+					<div class="col-xs-12 col-sm-6 col-md-4">
+						<img src="img/icons/cs.png">
+						<h3>Candy Sweet</h3>
+					</div>
+					<div class="col-xs-12 col-sm-6 col-md-4">
+						<img src="img/icons/bike.png">
+						<h3>Bike Racing</h3>
+					</div>
+
+				</div>
+				<hr class="my-4">
+			</div>
+
+			<!--- Two Column Section User feeback -->
+			<div id="support" class="row feedback">
+
+				<div class="col-md-6">
+					<div class="jumbotron">
+						<h2>Report a problem</h2>
+						<form id="complaint">
+							<div class="form-group">
+								<label for="Your Name">Your Name</label>
+								<input style="width:60%;" type="text" class="form-control" id="name" placeholder="Name">
+								<label for="Email">Email</label>
+								<input style="width:60%;" type="text" class="form-control" id="email" placeholder="Your Email">
+								<label for="Email">Message</label>
+								<input style="width:60%;" type="text" class="form-control" id="message" placeholder="Game name & issue">
+							</div>
+							<button id="submit" type="submit" class="btn btn-success">Submit</button>
+						</form>
+					</div>
+				</div>
 
 
-		<div class="col-md-6">
-			<div id="jumboFeedback" class="jumbotron">
-				<h2>Subscribe for new games</h2>
-				<form id="subscribe">
-					<div class="form-group">
-						<label for="Your Name">Your Email</label>
-						<input style="width:60%;" type="text" class="form-control" id="emailSub" placeholder="Your Email">
+				<div class="col-md-6">
+					<div id="jumboFeedback" class="jumbotron">
+						<h2>Subscribe for new games</h2>
+						<form id="subscribe">
+							<div class="form-group">
+								<label for="Your Name">Your Email</label>
+								<input style="width:60%;" type="text" class="form-control" id="emailSub" placeholder="Your Email">
+
+							</div>
+							<button type="submit" class="btn btn-danger">Subscribe</button>
+						</form>
+						<br>
+						<iframe style="height:10%;" src="https://giphy.com/embed/3oz8xPjPPvOwrGjip2" width="280" height="270" frameBorder="0" class="giphy-embed" allowFullScreen margin="0"></iframe>
+					</div>
+
+				</div>
+
+
+			</div>
+
+
+			<!--- Fixed background -->
+
+
+			<!--- Emoji Section -->
+
+
+			<!--- Meet the team -->
+
+
+			<!--- Cards -->
+
+
+			<!--- Two Column Section -->
+
+
+			<!--- Connect -->
+			<div class="container-fluid padding">
+				<div class="row text-center padding">
+					<div class="col-12">
+						<h3>Connect with us</h3>
+					</div>
+					<div class="col-12 social padding">
+						<hr class="light">
+						<a href="#"><i class="fab fa-facebook"></i></a>
+						<a href="https://twitter.com/cherucole"><i class="fab fa-twitter"></i></a>
+						<a href="#"><i class="fab fa-google-plus-g"></i></a>
+						<a href="#"><i class="fab fa-instagram"></i></a>
+						<a href="#"><i class="fab fa-youtube"></i></a>
+						<hr class="light">
+
 
 					</div>
-					<button type="submit" class="btn btn-danger">Subscribe</button>
-				</form>
-				<br>
-				<iframe style="height:10%;" src="https://giphy.com/embed/3oz8xPjPPvOwrGjip2" width="280" height="270" frameBorder="0" class="giphy-embed" allowFullScreen margin="0"></iframe>
+				</div>
+
 			</div>
 
-		</div>
+			<!--- Footer -->
+			<footer>
+				<div class="container-fluid padding">
+					<div class="row text-center">
+						<div class="col-md-4">
+							<img src="img/logo.png">
+							<hr class="light">
+							<p>555-555-55555</p>
+							<p>gamecity@gmail.com</p>
+							<p>100 Nairobi</p>
+							<p>Ngong, Nairobi, 001000</p>
 
+						</div>
+						<div class="col-md-4">
+							<hr class="light">
+							<h5>Our Partners</h5>
+							<hr class="light">
+							<p>Google Playstore</p>
+							<p>Apple Appstore</p>
+							<p>Windows Phone Store</p>
 
-	</div>
+						</div>
+						<div class="col-md-4">
+							<hr class="light">
+							<h5>Supported Platforms</h5>
+							<hr class="light">
+							<p>Android</p>
+							<p>iOS</p>
+							<p>Windows Phone</p>
+							<p>Blackberry</p>
 
+						</div>
+						<div class="col-12">
+							<hr class="light-100">
+							<h5>&copy; cherucole</h5>
 
-	<!--- Fixed background -->
-
-
-	<!--- Emoji Section -->
-
-
-	<!--- Meet the team -->
-
-
-	<!--- Cards -->
-
-
-	<!--- Two Column Section -->
-
-
-	<!--- Connect -->
-	<div class="container-fluid padding">
-		<div class="row text-center padding">
-			<div class="col-12">
-				<h3>Connect with us</h3>
-			</div>
-			<div class="col-12 social padding">
-				<hr class="light">
-				<a href="#"><i class="fab fa-facebook"></i></a>
-				<a href="https://twitter.com/cherucole"><i class="fab fa-twitter"></i></a>
-				<a href="#"><i class="fab fa-google-plus-g"></i></a>
-				<a href="#"><i class="fab fa-instagram"></i></a>
-				<a href="#"><i class="fab fa-youtube"></i></a>
-				<hr class="light">
-
-
-			</div>
-		</div>
-
-	</div>
-
-	<!--- Footer -->
-	<footer>
-		<div class="container-fluid padding">
-			<div class="row text-center">
-				<div class="col-md-4">
-					<img src="img/logo.png">
-					<hr class="light">
-					<p>555-555-55555</p>
-					<p>gamecity@gmail.com</p>
-					<p>100 Nairobi</p>
-					<p>Ngong, Nairobi, 001000</p>
+						</div>
+					</div>
 
 				</div>
-				<div class="col-md-4">
-					<hr class="light">
-					<h5>Our Partners</h5>
-					<hr class="light">
-					<p>Google Playstore</p>
-					<p>Apple Appstore</p>
-					<p>Windows Phone Store</p>
-
-				</div>
-				<div class="col-md-4">
-					<hr class="light">
-					<h5>Supported Platforms</h5>
-					<hr class="light">
-					<p>Android</p>
-					<p>iOS</p>
-					<p>Windows Phone</p>
-					<p>Blackberry</p>
-
-				</div>
-				<div class="col-12">
-					<hr class="light-100">
-					<h5>&copy; cherucole</h5>
-
-				</div>
-			</div>
-
-		</div>
-	</footer>
+			</footer>
 
 </body>
 
