--- a/game2.html
+++ b/game2.html
@@ -80,14 +80,14 @@ AVAILABLE NOW</h2>
     <div id="divider" class="row">
       <img src="img/line.jpg" alt=""></div>
     <div class="container">
-      <h2><p align="center">TRAILER</h2></p>
+      <h2 id= "caps"><p align="center">Trailer</h2></p>
       <iframe width="1000" height="600" src="https://www.youtube.com/embed/ehixbGzOZ_M" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen align="center" id="frame"></iframe>
     </div>
     <div id="divider" class="row"><br>
       <img src="img/line.jpg" alt=""></div>
     <div class="container">
       <h3 id="aha" align="center">What Is </h3>
-      <h2 id="aha" align="center">Harry Potter: Hogwarts Mystery?</h2><br>
+      <h2 id="aha" align="center" color="white">Harry Potter: Hogwarts Mystery?</h2><br>
       <p align="center"> Harry Potter: Hogwarts Mystery is the first game in which players can create their own character and experience life as a Hogwarts student. The game will launch under Portkey Games, from Warner Bros. Interactive Entertainment, the games label dedicated
         to creating new Wizarding World mobile and video game experiences that place the player at the centre of their own adventure, inspired by J.K. Rowling’s original stories.</p>
     </div>
